fix(blind): Adjusted the spaces and aligned properly

--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -49,15 +49,14 @@
         color: var(--theme-color-soft-text);
       }
 
-       .header-actions {
+      .header-actions {
         --ix-icon-button-color: var(--theme-color-primary);
       }
-    }  @else {
+    }else {
       .blind-header-title-label,
       .blind-header-title-sublabel {
         color: var(--theme-color-#{$variant}--contrast);
       }
-      
       .header-actions {
         --ix-icon-button-color: var(--theme-color-#{$variant}--contrast);
       }
